--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,7 @@ button:focus{
 }
 
 #botaoExp{
-    background-image: url(../img/exp.png);
+    background-image: url(../img/exp.jpg);
     margin: 1px -1px;
     background-repeat: no-repeat;
     background-size: 190px 70px;
@@ -194,3 +194,43 @@ button:focus{
 .custoUnidade{
     margin: -1px 0px 0px 30px;
 }
+
+#nivelContanier{
+    border-width: 3px 3px 0px 3px;
+    border-color: #55492c #55492c #55492c #55492c;
+    border-style: solid;
+    background-color: #080808;
+    width: 200px;
+    height: 50px;
+    position: absolute;
+    top: 70px;
+    color: #FFFFFF;
+}
+
+#nivelAtual{
+    /*border:1px solid red;*/
+    font-size: 20px;
+    width: 50px;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+#barraExp{
+    height: 6px;
+    width: 170px;
+    margin: auto;
+    background-color:#1a3243;
+}
+
+#expAtual{
+    /*border:1px solid red;*/
+    width: 25px;
+    height: 20px;
+    float: right;
+    bottom: 25px;
+    position: relative;
+    font-size: 12px;
+    right: 12px;
+}
+
+
